force-app/main/default/objects/OCLQS_Integration_Batch_Monitor__c/OCLQS_Integration_Batch_Monitor__c.object-meta.xml
<CustomObject>
    <description>Object to store transaction monitoring details for batch interfaces
Build for Integration purpose</description>
    <label>Integration Batch Monitor</label>
    <nameField>
        <displayFormat>Batch-{000000}</displayFormat>
        <label>Integration Batch Monitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Batch Monitor</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>