force-app/main/default/objects/OCLQS_Integration_Batch_Monitor__c/fields/Fail_Count__c.field-meta.xml
<CustomField>
    <fullName>Fail_Count__c</fullName>
    <label>Failure Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>