force-app/main/default/objects/OCLQS_Integration_Batch_Monitor__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <label>Success Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>