force-app/main/default/objects/OCLQS_Integration_Batch_Monitor__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <label>Integration Log</label>
    <referenceTo>OCLQS_Transaction_Log__c</referenceTo>
    <relationshipLabel>Integration Batch Monitor</relationshipLabel>
    <relationshipName>Int_rel_PIntLog_CIntMonitor</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>